--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,25 +17,20 @@
     </context-param>
 
     <!--在这里配置shiro的filter-->
-    <!-- shiro过虑器，DelegatingFilterProxy通过代理模式将spring容器中的bean和filter关联起来 -->
-    <!--<filter>
+    <!-- Shiro Filter is defined in the spring application context: -->
+    <filter>
         <filter-name>shiroFilter</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-        &lt;!&ndash; 设置true由servlet容器控制filter的生命周期 &ndash;&gt;
         <init-param>
             <param-name>targetFilterLifecycle</param-name>
             <param-value>true</param-value>
         </init-param>
-        &lt;!&ndash; 设置spring容器filter的bean id，如果不设置则找与filter-name一致的bean&ndash;&gt;
-        <init-param>
-            <param-name>targetBeanName</param-name>
-            <param-value>shiroFilter</param-value>
-        </init-param>
     </filter>
+
     <filter-mapping>
         <filter-name>shiroFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>-->
+    </filter-mapping>
 
     <!-- spring security -->
     <!--<filter>
@@ -65,7 +60,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:spring-mvc.xml,classpath:spring-security.xml</param-value>
+            <param-value>classpath:spring-mvc.xml,classpath:spring-shiro.xml</param-value>
         </init-param>
 
         <load-on-startup>1</load-on-startup>
@@ -87,7 +82,7 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:spring-mybatis.xml,
                      classpath:spring-mvc.xml,
-                     classpath:spring-security.xml
+                     classpath:spring-shiro.xml
         </param-value>
     </context-param>
 
