--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -91,4 +91,14 @@
         <session-timeout>15</session-timeout>
     </session-config>
 
+    <security-constraint>
+    <web-resource-collection >
+        <web-resource-name >SSL</web-resource-name>
+        <url-pattern>/confirmpay</url-pattern>
+    </web-resource-collection>
+    <user-data-constraint>
+        <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+    </user-data-constraint>
+    </security-constraint>
+
 </web-app>
