--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,17 +7,50 @@
 
     <display-name>web-ssm</display-name>
 
-    <welcome-file-list>
-        <welcome-file>/index2.jsp</welcome-file>
-    </welcome-file-list>
-
     <context-param>
         <param-name>log4jConfigLocation</param-name>
         <param-value>classpath:log4j.properties</param-value>
     </context-param>
 
-    <!--在这里配置shiro的filter-->
-    <!-- Shiro Filter is defined in the spring application context: -->
+    <welcome-file-list>
+        <welcome-file>/index2.jsp</welcome-file>
+    </welcome-file-list>
+
+    <!-- Spring 编码过滤器 start -->
+    <filter>
+        <filter-name>characterEncoding</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>characterEncoding</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <!-- Spring 编码过滤器 end -->
+
+    <!-- spring监听器 start -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            classpath:spring-mybatis.xml,
+            classpath:spring-mvc.xml,
+            classpath:spring-shiro.xml,
+            classpath:spring-jms.xml
+        </param-value>
+    </context-param>
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+    <!-- spring监听器 end -->
+
+    <!-- shiro filter start -->
     <filter>
         <filter-name>shiroFilter</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -31,75 +64,32 @@
         <filter-name>shiroFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <!-- shiro filter end -->
 
-    <!-- spring security -->
-    <!--<filter>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>-->
-
-
-    <!-- 编码过滤器 -->
-    <!--<filter>
-        <filter-name>encodingFilter</filter-name>
-        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-        <init-param>
-            <param-name>encoding</param-name>
-            <param-value>UTF-8</param-value>
-        </init-param>
-    </filter>-->
-
-    <!-- spring mvc servlet-->
+    <!-- spring mvc servlet start -->
     <servlet>
         <servlet-name>SpringMVC</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:spring-mvc.xml,classpath:spring-shiro.xml</param-value>
+            <param-value>classpath*:spring-mvc.xml</param-value>
         </init-param>
-
         <load-on-startup>1</load-on-startup>
         <async-supported>true</async-supported>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>SpringMVC</servlet-name>
-        <!-- 此处也可以配置成 *.do 形式 -->
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+    <!-- spring mvc servlet end -->
 
-    <!-- spring监听器 -->
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring-mybatis.xml,
-                     classpath:spring-mvc.xml,
-                     classpath:spring-shiro.xml
-        </param-value>
-    </context-param>
-
-    <!-- session配置 -->
+    <!-- session配置 start -->
     <session-config>
         <session-timeout>15</session-timeout>
     </session-config>
+    <!-- session配置 end -->
 
-    <!--<security-constraint>
-    <web-resource-collection >
-        <web-resource-name >SSL</web-resource-name>
-        <url-pattern>/confirmpay</url-pattern>
-    </web-resource-collection>
-    <user-data-constraint>
-        <transport-guarantee>CONFIDENTIAL</transport-guarantee>
-    </user-data-constraint>
-    </security-constraint>-->
+    <!-- SSL start -->
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>securedapp</web-resource-name>
@@ -109,5 +99,6 @@
             <transport-guarantee>CONFIDENTIAL</transport-guarantee>
         </user-data-constraint>
     </security-constraint>
+    <!-- SSL end -->
 
 </web-app>
