--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -90,7 +90,7 @@
     <!-- session配置 end -->
 
     <!-- SSL start -->
-    <security-constraint>
+    <!--<security-constraint>
         <web-resource-collection>
             <web-resource-name>securedapp</web-resource-name>
             <url-pattern>/*</url-pattern>
@@ -98,7 +98,7 @@
         <user-data-constraint>
             <transport-guarantee>CONFIDENTIAL</transport-guarantee>
         </user-data-constraint>
-    </security-constraint>
+    </security-constraint>-->
     <!-- SSL end -->
 
 </web-app>
