--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,6 @@
         <param-value>
             classpath:spring-mybatis.xml,
             classpath:spring-mvc.xml,
-            classpath:spring-shiro.xml,
             classpath:spring-jms.xml
         </param-value>
     </context-param>
@@ -51,7 +50,7 @@
     <!-- spring监听器 end -->
 
     <!-- shiro filter start -->
-    <filter>
+    <!--<filter>
         <filter-name>shiroFilter</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
         <init-param>
@@ -63,8 +62,10 @@
     <filter-mapping>
         <filter-name>shiroFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping>-->
     <!-- shiro filter end -->
+
+
 
     <!-- spring mvc servlet start -->
     <servlet>
@@ -88,6 +89,16 @@
         <session-timeout>15</session-timeout>
     </session-config>
     <!-- session配置 end -->
+
+    <servlet>
+        <servlet-name>CXFServlet</servlet-name>
+        <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CXFServlet</servlet-name>
+        <url-pattern>/cxf/*</url-pattern>
+    </servlet-mapping>
 
     <!-- SSL start -->
     <!--<security-constraint>
