--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driverClasss=com.mysql.jdbc.Driver
-jdbcUrl=jdbc:mysql://localhost:3306/mystore?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbcUrl=jdbc:mysql://106.14.165.51:3306/mystore?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 username=root
-password=
+password=root
 
 #定义初始连接数
 initialSize=0
