--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,8 @@
         <param-value>
             classpath:spring-mybatis.xml,
             classpath:spring-mvc.xml,
-            classpath:spring-jms.xml
+            classpath:spring-jms.xml,
+            classpath:spring-shiro.xml
         </param-value>
     </context-param>
     <listener>
@@ -50,7 +51,7 @@
     <!-- spring监听器 end -->
 
     <!-- shiro filter start -->
-    <!--<filter>
+    <filter>
         <filter-name>shiroFilter</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
         <init-param>
@@ -62,7 +63,7 @@
     <filter-mapping>
         <filter-name>shiroFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>-->
+    </filter-mapping>
     <!-- shiro filter end -->
 
 
@@ -97,19 +98,19 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>CXFServlet</servlet-name>
-        <url-pattern>/cxf/*</url-pattern>
+        <url-pattern>/webservice/*</url-pattern>
     </servlet-mapping>
 
     <!-- SSL start -->
-    <!--<security-constraint>
+    <security-constraint>
         <web-resource-collection>
-            <web-resource-name>securedapp</web-resource-name>
+            <web-resource-name>web-ssm</web-resource-name>
             <url-pattern>/*</url-pattern>
         </web-resource-collection>
         <user-data-constraint>
             <transport-guarantee>CONFIDENTIAL</transport-guarantee>
         </user-data-constraint>
-    </security-constraint>-->
+    </security-constraint>
     <!-- SSL end -->
 
 </web-app>
